[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Green/L'Assaut/Assets/GUI/BonusStatIcon_None.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_BodyBackground.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Green/L'Assaut/GUI/LAssaut_InfoPanel.gd" type="Script" id=4]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="LAssaut_InfoPanel" instance=ExtResource( 1 )]
size_flags_horizontal = 6
script = ExtResource( 4 )

[node name="VBoxContainer" parent="." index="0"]
margin_bottom = 51.0

[node name="MarginContainer" parent="VBoxContainer/HeaderMarginer/MarginContainer" index="1"]
margin_left = 13.0
margin_right = 37.0

[node name="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer/MarginContainer" index="0"]
margin_right = 24.0
text = "Stacks"

[node name="BodyMarginer" parent="VBoxContainer" index="2"]
margin_bottom = 50.0

[node name="Background" type="TextureRect" parent="VBoxContainer/BodyMarginer" index="0"]
margin_right = 110.0
margin_bottom = 36.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="VBoxContainer/BodyMarginer" index="1"]
margin_right = 110.0
margin_bottom = 36.0
size_flags_vertical = 6
custom_constants/margin_right = 8
custom_constants/margin_top = 5
custom_constants/margin_left = 8
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/ContentMarginer" index="0"]
margin_left = 36.0
margin_top = 5.0
margin_right = 73.0
margin_bottom = 31.0
size_flags_horizontal = 6

[node name="StatIcon" type="TextureRect" parent="VBoxContainer/BodyMarginer/ContentMarginer/HBoxContainer" index="0"]
margin_right = 26.0
margin_bottom = 26.0
size_flags_horizontal = 2
size_flags_vertical = 6
texture = ExtResource( 2 )

[node name="StatLabel" type="Label" parent="VBoxContainer/BodyMarginer/ContentMarginer/HBoxContainer" index="1"]
margin_left = 30.0
margin_top = 6.0
margin_right = 37.0
margin_bottom = 19.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "x"

[node name="BottomBorder" parent="VBoxContainer" index="3"]
margin_top = 50.0
margin_bottom = 51.0
